--- a/CLOVER/config_Mojave.plist
+++ b/CLOVER/config_Mojave.plist
@@ -204,7 +204,7 @@
 	<key>Boot</key>
 	<dict>
 		<key>Arguments</key>
-		<string>dart=0 nv_disable=1 darkwake=10 kext-dev-mode=1 -uia_ignore_rmcf</string>
+		<string>dart=0 nv_disable=1 darkwake=10 kext-dev-mode=1</string>
 		<key>#DefaultVolume</key>
 		<string>MojaveSSD</string>
 		<key>NeverHibernate</key>
@@ -490,6 +490,8 @@
 				<string>USB port limit</string>
 				<key>MatchOS</key>
 				<string>10.14.x</string>
+				<key>Disabled</key>
+				<true/>
 			</dict>
 			<dict>
 				<key>Comment</key>
