--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -18,6 +18,8 @@
 			<false/>
 			<key>Fixes</key>
 			<dict>
+				<key>FixShutdown</key>
+				<true/>
 				<key>Comment-IRQ Fix</key>
 				<string>The following fixes may be needed for onboard audio/USB/etc</string>
 				<key>FixTMR</key>
@@ -59,7 +61,7 @@
 					<key>Replace</key>
 					<data>WEhDXw==</data>
 					<key>Disabled</key>
-					<true/>
+					<false/>
 				</dict>
 				<dict>
 					<key>Comment</key>
@@ -185,12 +187,6 @@
 				<key>Signature</key>
 				<string>DMAR</string>
 			</dict>
-			<dict>
-				<key>Signature</key>
-				<string>SSDT</string>
-				<key>TableId</key>
-				<string>xh_rvp10</string>
-			</dict>
 		</array>
 		<key>SSDT</key>
 		<dict>
@@ -199,7 +195,7 @@
 			<key>Generate</key>
 			<dict>
 				<key>PluginType</key>
-				<string>True</string>
+				<true/>
 			</dict>
 			<key>NoOemTableId</key>
 			<false/>
@@ -208,7 +204,7 @@
 	<key>Boot</key>
 	<dict>
 		<key>Arguments</key>
-		<string>dart=0 nv_disable=1 darkwake=10 kext-dev-mode=1</string>
+		<string>dart=0 nv_disable=1 darkwake=9 kext-dev-mode=1</string>
 		<key>DefaultVolume</key>
 		<string>MojaveSSD</string>
 		<key>NeverHibernate</key>
@@ -486,6 +482,18 @@
 		<key>KextsToPatch</key>
 		<array>
 			<dict>
+				<key>Comment</key>
+				<string>disable port limit in XHCI kext (credit PMHeart)</string>
+				<key>MatchOS</key>
+				<string>10.14.x</string>
+				<key>Name</key>
+				<string>com.apple.driver.usb.AppleUSBXHCI</string>
+				<key>Find</key>
+				<data>g/sPD4MDBQAA</data>
+				<key>Replace</key>
+				<data>g/sPkJCQkJCQ</data>
+			</dict>
+			<dict>
 				<key>Name</key>
 				<string>com.apple.driver.AirPort.Brcm4360</string>
 				<key>Disabled</key>
@@ -496,20 +504,6 @@
 				<data>gflSqgAAdSk=</data>
 				<key>Replace</key>
 				<data>gflSqgAAZpA=</data>
-			</dict>
-			<dict>
-				<key>Name</key>
-				<string>com.apple.driver.usb.AppleUSBXHCI</string>
-				<key>Find</key>
-				<data>g/sPD4MDBQAA</data>
-				<key>Replace</key>
-				<data>g/sPkJCQkJCQ</data>
-				<key>Comment</key>
-				<string>USB port limit</string>
-				<key>MatchOS</key>
-				<string>10.14.x</string>
-				<key>Disabled</key>
-				<false/>
 			</dict>
 			<dict>
 				<key>Comment</key>
